--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@ header button:hover {
   position: relative;
   height: 100vh;
 
-  background-image: url('../imgs/wallpaper.jpg');
+  background-image: url('./imgs/wallpaper.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
