--- a/src/App.css
+++ b/src/App.css
@@ -64,14 +64,21 @@ header button:hover {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  background-image: url('./imgs/shop-background.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
 }
 .shop-items {
   display: grid;
   grid-template-columns: repeat(3, 300px);
   column-gap: 80px;
   row-gap: 50px;
-  margin-bottom: 10px;
+  margin-bottom: 25px;
   margin-top: 10px;
+  background-color: white;
 }
 
 .item {
