--- a/src/App.css
+++ b/src/App.css
@@ -90,6 +90,7 @@ header button:hover {
   border: 1px solid black;
   transition: all 0.4s;
   cursor: pointer;
+  color: black;
 }
 
 .item:hover {
@@ -104,6 +105,10 @@ header button:hover {
   margin: 0;
 }
 
+.item a {
+  text-decoration: none;
+}
+
 .img-holder {
   width: 300px;
   height: 350px;
@@ -115,4 +120,59 @@ header button:hover {
   max-width: 100%;
   max-height: 100%;
   object-fit: cover;
+}
+
+.player-page {
+  background-image: url('./imgs/shop-background.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 20px 0;
+}
+
+.player-item {
+  display: flex;
+  column-gap: 15px;
+}
+
+.img-holder-player-page {
+  width: 500px;
+  height: 550px;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  border: 2px solid black;
+}
+
+.img-holder-player-page button {
+  position: absolute;
+  bottom: 10px;
+  background-color: black;
+  color: white;
+  font-size: 30px;
+  padding: 5px 10px;
+  font-weight: 600;
+  transition: all 0.3s;
+  cursor: pointer;
+}
+
+.img-holder-player-page button:hover {
+  font-size: 32px;
+  /* padding: 5px 17px; */
+}
+
+.player-item img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+}
+
+.player-discription p {
+  font-weight: bold;
 }
