finish cart functionality

--- a/src/App.css
+++ b/src/App.css
@@ -178,3 +178,71 @@ header button:hover {
 .player-discription p {
   font-weight: bold;
 }
+
+.cart-item {
+  display: flex;
+  gap: 15px;
+  border: 1px solid black;
+  width: fit-content;
+  padding-right: 15px;
+}
+
+.cart-image-holder {
+  width: 200px;
+  height: 250px;
+  display: flex;
+  justify-content: center;
+}
+
+.cart-image-holder img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+}
+
+/* Empty Cart */
+
+.empty-cart {
+  border: 1px solid black;
+  width: fit-content;
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.empty-cart button {
+  bottom: 10px;
+  background-color: black;
+  color: white;
+  font-size: 15px;
+  padding: 5px 10px;
+  transition: all 0.3s;
+  cursor: pointer;
+}
+
+.empty-cart button:hover {
+  color: black;
+  background-color: white;
+}
+
+.empty-cart p {
+  font-weight: bold;
+  font-size: 25px;
+}
+
+.cart {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
