--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,13 @@
   background-image: url('./imgs/shop-background.jpg');
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+}
+
 .main {
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -301,9 +307,7 @@ header button:hover {
 }
 
 /* Footer */
-.footer {
-  position: fixed;
-  bottom: 0;
+footer {
   background-color: black;
   color: white;
   display: flex;
@@ -313,15 +317,11 @@ header button:hover {
   height: 50px;
   font-weight: 600;
   width: 100%;
+  margin-top: auto;
 }
 
-.footer img {
+footer img {
   width: 30px;
   height: 30px;
   border-radius: 15px;
-  transition: all 0.3;
-}
-
-.footer img:hover {
-  background-color: white;
 }
