--- a/src/App.css
+++ b/src/App.css
@@ -242,7 +242,8 @@ header button:hover {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 100px;
+  margin-top: 40px;
+  margin-bottom: 30px;
   background-color: white;
   width: fit-content;
   border: 1px black solid;
