--- a/src/Styles/player-page.css
+++ b/src/Styles/player-page.css
@@ -1,15 +1,9 @@
 .player-page {
-  background-image: url('../imgs/shop-background.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center;
-
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 20px 0;
+  margin: 20px auto;
 }
 
 .player-item {
@@ -49,4 +43,16 @@
 
 .player-discription p {
   font-weight: bold;
+}
+
+@media (max-width: 720px) {
+  .player-item {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .img-holder-player-page {
+    width: 300px;
+    height: 350px;
+  }
 }
