--- a/src/Styles/main-cart.css
+++ b/src/Styles/main-cart.css
@@ -6,7 +6,7 @@
   margin-top: 40px;
   margin-bottom: 30px;
   background-color: white;
-  width: fit-content;
+  max-width: 90vh;
   border: 1px black solid;
 }
 
@@ -15,9 +15,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 70vh;
   height: fit-content;
   margin-bottom: 25px;
+  padding: 0 30px;
 }
 
 .main-cart button {
