--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,24 @@
   background-image: url('./imgs/shop-background.jpg');
 }
 
+html {
+  height: 100%;
+}
+
 body {
+  min-height: 100%;
+
   display: flex;
   flex-direction: column;
 }
 
-.main {
+#root {
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
+}
+
+.main {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -18,7 +29,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  /* height: 100vh; */
   width: 100%;
 
   background-image: url('./imgs/wallpaper.jpg');
