--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-:root {
+/* :root {
   background-image: url('./imgs/shop-background.jpg');
-}
+} */
 
 html {
   height: 100%;
@@ -17,6 +17,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  background-image: url('./imgs/shop-background.jpg');
 }
 
 .main {
@@ -29,7 +30,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* height: 100vh; */
+  min-height: 100vh;
   width: 100%;
 
   background-image: url('./imgs/wallpaper.jpg');
